[package]
edition = "2018"
name = "axum-backend"
publish = false
version = "0.1.0"

[dependencies]
axum = {version = "0.4.5", features = ["ws", "headers"]}
fake = {version = "2.4", features = ['derive']}
headers = "0.3"
rand = "0.8.5"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
shared = {path = "../shared"}
tokio = {version = "1.0", features = ["full"]}
tower-http = {version = "0.2.0", features = ["fs", "trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
