[package]
edition = "2018"
name = "axum-backend"
publish = false
version = "0.1.0"

[dependencies]
axum = { version = "0.4.6", features = ["ws", "headers"] }
fake = { version = "2.4.3", features = ['derive'] }
headers = "0.3.7"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
shared = {path = "../shared"}
tokio = { version = "1.17.0", features = ["full"] }
tower-http = { version = "0.2.3", features = ["fs", "trace"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
