[package]
edition = "2018"
name = "yew-frontend"
version = "0.1.0"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.56"
log = "0.4.14"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
web-sys = {version = "0.3.56", features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]}
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.19"
